<resources>
    <string name="price_format">%1$s원</string>


    <string name="app_name">Random\nCloset</string>
    <string name="random_fashion">Random Closet</string>
    <string name="login_label">로그인 하기</string>
    <string name="login_title">나만의 모바일 룩북!</string>
    <string name="login_sub_title">로그인 후 더 많은 기능을 사용해보세요 :)</string>
    <string name="kakaotalk_login_text">카카오톡으로 로그인</string>
    <string name="facebook_login_text">페이스북으로 로그인</string>
    <string name="naver_login_text">네이버으로 로그인</string>
    <string name="google_login_text">구글 아이디로 로그인</string>


    <string name="following_label">팔로잉</string>
    <string name="random_label">랜덤</string>
    <string name="new_label">N</string>
    <string name="_1">1</string>
    <string name="filter_sub_title">취향에 딱 맞는 패션을 보여드릴게요</string>
    <string name="filter_title">어떤 패션이 궁금하세요?</string>
    <string name="gender_label">Gender</string>
    <string name="height_label">Height</string>
    <string name="profile_checkbox_label">프로필 정보 입력</string>
    <string name="weight_label">Weight</string>
    <string name="man">MAN</string>
    <string name="woman">WOMAN</string>
    <string name="photo_zip_title">사진 모아보기</string>
    <string name="follow_btn_text">+ 팔로우</string>
    <string name="unfollow_btn_text">팔로잉</string>


    <string name="recommend_title">이 의상은 어때?</string>
    <string name="recommend_sub_title">룩북에 어울리는 아이템과 나의 생각을 공유해보세요!</string>
    <string name="beat_label">베스트</string>
    <string name="recent_label">최신순</string>
    <string name="plus">+</string>
    <string name="information_label">Information</string>
    <string name="clothes_label">Clothes</string>
    <string name="recommend_btn_text"><![CDATA[이 의상은 어때? >]]></string>
    <string name="link_btn_text">링크 복사하기</string>
    <string name="share_btn_text">공유하기</string>
    <string name="bookmark_btn_text">스크랩하기</string>
    <string name="no_interest_btn_text">관심없음</string>
    <string name="cancel_follow_btn_text">팔로우 취소</string>
    <string name="block_btn_text">차단하기</string>
    <string name="declare_btn_text">신고하기</string>
    <string name="tpo">TPO</string>
    <string name="season">Season</string>
    <string name="style">Style</string>
    <string name="place_label">Place</string>
    <string name="introduction_label">Introduction</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="brand">Brand</string>
    <string name="upload_photo_sub_title">업로드한 사진의 상세정보를 등록해주세요.</string>
    <string name="upload_photo_title">사진 등록하기</string>
    <string name="_3">3</string>
    <string name="empty_string" />


    <string name="mypage_title">%1$s 님의 룩북</string>
    <string name="height">%1$d cm</string>
    <string name="weight">%1$d kg</string>

    <string name="edit_profile">프로필 수정하기</string>
    <string name="count_posts">게시물\n%1$d</string>
    <string name="count_follower">팔로워\n%1$d</string>
    <string name="count_following">팔로잉\n%1$d</string>
    <string name="no_reg_post">등록한 게시물이 존재하지 않습니다.</string>
    <string-array name="spinner_array">
        <item> All</item>
        <item> Outer</item>
        <item> Top</item>
        <item> Bottom</item>
        <item> Shoes</item>
        <item> Acc</item>
    </string-array>

    <string-array name="declare_array">
        <item>나체 사진 또는 성적 행위</item>
        <item>혐오 발언 또는 상징</item>
        <item>폭력 또는 위험한 단체</item>
        <item>사기 또는 거짓 정보</item>
        <item>따돌림 또는 괴롭힘</item>
        <item>지적재산권 침해</item>
        <item>자살 또는 자해</item>
        <item>불법 또는 규제 상품 판매</item>
        <item>기타 문제</item>
    </string-array>

    <string-array name="spinner_item_order">
        <item>인기순</item>
        <item>최신순</item>
        <item>고가순</item>
        <item>저가순</item>
    </string-array>

    <string-array name="spinner_look_order">
        <item>인기순</item>
        <item>최신순</item>
    </string-array>
    <string name="default_notification_channel_id">default_notification_channel_id</string>

</resources>