<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tpo_label"
        style="@style/montserrat_bold_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tpo" />
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tpo_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" />
    <TextView
        android:id="@+id/season_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/season"
        android:layout_marginTop="30dp"
        style="@style/montserrat_bold_label"
        />
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/season_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/style_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/style"
        android:layout_marginTop="30dp"
        style="@style/montserrat_bold_label"
        />
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/style_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
       />
</LinearLayout>