<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="40dp">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />
    <View
        android:id="@+id/bottom_line"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/line_grey2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/bottom_linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/bottom_line"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bottom_sheet_link_copy_btn"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_link"
            android:drawablePadding="8dp"
            android:text="@string/link_btn_text"
            android:background="@drawable/selector_btn_whitegrey"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="27dp"
            android:paddingBottom="27dp"
            android:layout_marginEnd="10dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bottom_sheet_share_btn"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_share"
            android:drawablePadding="8dp"
            android:text="@string/share_btn_text"
            android:background="@drawable/selector_btn_whitegrey"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="27dp"
            android:paddingBottom="27dp"
            android:textColor="@color/default_text"
            android:layout_marginEnd="10dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bottom_sheet_scrap_btn"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_scrap_unselected_default_color"
            android:drawablePadding="8dp"
            tools:text="@string/bookmark_btn_text"
            android:background="@drawable/selector_btn_whitegrey"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="27dp"
            android:paddingBottom="27dp"
            />
    </LinearLayout>
  <!--  <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no_interest_btn"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:background="@drawable/selector_btn_whitegrey"
        android:layout_marginTop="10dp"
        android:text="@string/no_interest_btn_text"
        app:layout_constraintTop_toBottomOf="@id/bottom_linear"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
        />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bottomSheet_follow_btn"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:background="@drawable/selector_btn_whitegrey"
        android:layout_marginTop="10dp"
        tools:text="@string/cancel_follow_btn_text"
        app:layout_constraintTop_toBottomOf="@id/bottom_linear"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
        android:visibility="gone"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/block_btn"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:background="@drawable/selector_btn_whitegrey"
        android:layout_marginTop="10dp"
        android:text="@string/block_btn_text"
        app:layout_constraintTop_toBottomOf="@id/bottomSheet_follow_btn"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
        android:visibility="gone"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/declare_btn"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:background="@drawable/selector_btn_whitegrey"
        android:layout_marginTop="10dp"
        android:text="@string/declare_btn_text"
        app:layout_constraintTop_toBottomOf="@id/block_btn"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
        android:textColor="@color/lf_orange"
        />
</androidx.constraintlayout.widget.ConstraintLayout>