<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!-- 페이스북 / 구글 로고 svg 다시 받아야하지만, api 규정상 해당 로고가 사용 가능한지 모르기 때문에 보류-->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_scrollFlags="scroll|enterAlways">
                <TextView
                    android:id="@+id/app_bar_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_fashion"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:textColor="@color/default_text"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginStart="5dp"/>
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:id="@+id/app_bar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="12dp"
            android:padding="5dp"
            style="@style/app_bar_label"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/background_grey"
        android:overScrollMode="never"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="160dp"
            >
            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:text="@string/login_title"
                android:textSize="30sp"
                android:fontFamily="@font/spoqahansansneo_bold"
                android:textColor="@color/default_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/title_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_sub_title"
                app:layout_constraintTop_toBottomOf="@id/title_text"
                app:layout_constraintStart_toStartOf="@id/title_text"
                android:textSize="14sp"
                android:fontFamily="@font/spoqahansansneo_medium"
                android:textColor="@color/dark_grey_text"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/kakao_login"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                app:layout_constraintTop_toBottomOf="@id/title_sub"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="31dp"
                android:background="@drawable/bg_radi3_yello"
                android:drawableStart="@drawable/ic_kakaologo"
                android:paddingStart="10dp"
                android:text="카카오 로그인"
                android:paddingEnd="51dp"
                style="@style/spoqa_14_medium"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/kakao_login2"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                app:layout_constraintTop_toBottomOf="@id/kakao_login"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_radi3_yello"
                android:drawableStart="@drawable/ic_kakaologo"
                android:paddingStart="10dp"
                android:text="카카오톡으로 시작하기"
                android:paddingEnd="51dp"
                style="@style/spoqa_14_medium"
                />

            <ProgressBar
                android:layout_centerInParent="true"
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:indeterminateTint="@color/black"
                android:visibility="gone"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
